platform/gitea/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea-ci
spec:
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  ports:
  - name: http
    port: 3000
    targetPort: http
  type: ClusterIP
