platform/gitea/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gitea-route
  namespace: gitea-ci
spec:
  parentRefs:
  - name: external-http
    namespace: kube-system
  hostnames:
  - "gitea.hannesalbeiro.com"
  rules:
  - backendRefs:
    - name: gitea-http
      port: 3000
